Closed Bug 1607111 Opened 6 years ago Closed 6 years ago

Lockwise UI is not translated in Japanese on Mac

Categories

(Core :: Internationalization, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla74
Tracking Status
firefox71 --- wontfix
firefox72 + wontfix
firefox73 + fixed
firefox74 --- fixed

People

(Reporter: glandium, Assigned: zbraniecki)

References

Details

(Whiteboard: [passwords:management])

Attachments

(1 file)

When opening the Lockwise UI on Mac in a Japanese build, via burger menu -> Login and Passwords, the UI is all in English. That's not the case on Windows and Linux, most probably due to the fact that Japanese for Mac is a separate locale.

The historic distinction between the two Japanese locales is hurting. It feels like new strings translated in one should automatically end up in the other.

OTOH, I also wonder, at this point, how different they actually are, and if keeping those differences still make sense at all.

You didn't specify in which version you're seeing this, but I guess it's in any version of Firefox (I see it in Nightly).

This is not a bug that the Japanese team can solve, it's a bug in the code for the Lockwise team to fix.

The historic distinction between the two Japanese locales is hurting. It feels like new strings translated in one should automatically end up in the other.

OTOH, I also wonder, at this point, how different they actually are, and if keeping those differences still make sense at all.

While I'd be the first to rejoice if we can get rid of the two locales, they're very different.
https://github.com/mozilla-japan/gecko-l10n

Fluent has the potential of serving both, but we're far from being able to use it at this point.

Component: ja / Japanese → about:logins
Product: Mozilla Localizations → Firefox
QA Contact: l10n-qa

[Tracking Requested - why for this release]: about:logins is untranslated on macOS for Japanese users.

I've tested this on a ja-JP-mac nightly build.

I could also reproduce this with about:welcome and about:home, so this isn't anything about:logins specific. Thus moving to Intl.

One thing I noticed is that about:preferences works, and shows ja-JP-macos as lang attribute, while the pages that don't work show ja-JP-mac.

My suspicion is that this is something about the l10n registry in parent vs child process.

Zibi, do you have an idea?

Component: about:logins → Internationalization
Flags: needinfo?(gandalf)
Product: Firefox → Core
Whiteboard: [passwords:management]
Priority: -- → P1
Assignee: nobody → gandalf
Status: NEW → ASSIGNED

So, this is fortunately fairly easy, but what we really should do at this point is basically move all callsites to use BCP47 leaving three places to use LangTags:

  • Chrome Registry protocol for loading DTD/properties
  • L10nRegistry for loading resource:// for Fluent
  • Addons Manager for loading resource:// for langpack/fluent

This could be as simple as "LocaleService::ConvertToMozillaLocalePath" which would only convert ja-JP-macos to ja-JP-mac.

Flags: needinfo?(gandalf)

I filed bug 1609585 to migrate as much as possible to BCP47. Also, bug 1609585 will simplify the langtags vs bcp47 further.

See Also: → 1609585
See Also: → 1609618
Pushed by zbraniecki@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/26a5aa048258 Use BCP47 lang tags for negotiation in content process. r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74

Please nominate this for Beta approval when you get a chance.

Flags: needinfo?(gandalf)

Comment on attachment 9121202 [details]
Bug 1607111 - Use BCP47 lang tags for negotiation in content process.

Beta/Release Uplift Approval Request

  • User impact if declined: ja-JP-mac will have content process pages localized in en-US
  • Is this code covered by automated tests?: Unknown
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): it's a simple single line change that affects only ja-JP-mac and was verified to work in Nightly.
  • String changes made/needed: None
Flags: needinfo?(gandalf)
Attachment #9121202 - Flags: approval-mozilla-beta?

Comment on attachment 9121202 [details]
Bug 1607111 - Use BCP47 lang tags for negotiation in content process.

Fixes Japanese localization of about:logins on macOS. Approved for 73.0b8.

Attachment #9121202 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: