Bug 1607111 - Use BCP47 lang tags for negotiation in content process. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D60089